--- a/app/src/main/res/layout/rv_bier_element.xml
+++ b/app/src/main/res/layout/rv_bier_element.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:text="MY FIRST BEER! !"
+        android:textColor="#FFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rv_biere_element_name" />
