--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-
-
-    <TextView
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/image"
+        android:src="@drawable/hearthstone"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.25"
-        android:text="hello"
+        android:layout_centerHorizontal="true"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFF"
+        android:layout_below="@+id/image"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/Welcome"
+        android:id="@+id/text" />
+
+    <Button
+        android:id="@+id/Alpha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text"
+        android:text="@string/alpha"
+        android:onClick="Alpha"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
