--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.frede.myapplication.MainActivity">
 
+    <ImageView
+        android:id="@+id/image"
+        android:src="@drawable/hearthstone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Bienvenue dans Hearthstone Cards. Selectionnez dans le menu un affichage pour les cartes."
+        android:layout_below="@+id/image"
+        android:textColor="#FFFF"
+        android:text="@string/Welcome"
         android:id="@+id/text" />
+
+    <Button
+        android:id="@+id/Alpha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text"
+        android:text="@string/alpha"
+        android:onClick="Alpha"/>
+
+
 
 
 
