--- a/app/src/main/res/layout/activity_seconde.xml
+++ b/app/src/main/res/layout/activity_seconde.xml
@@ -12,15 +12,25 @@
     tools:context="com.example.frede.myapplication.SecondeActivity">
 
 
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/circular_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:indeterminateDuration="1500"
+    />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_biere"
         android:scrollbars="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-
         />
+
 
 </RelativeLayout>
