--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,19 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:title="@string/random"
-        android:id="@+id/fItem"
-        app:showAsAction="never"
-        />
-    <item
-        android:id="@+id/sItem"
-        android:title="@string/alpha"
-        app:showAsAction="never"
-        />
+
     <item
         android:id="@+id/tItem"
-        android:title="@string/setting"
+        android:title="@string/DelCache"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/About"
+        android:title="@string/about"
+        app:showAsAction="never"
+        android:linksClickable="true"/>
+
+    <TextView android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:textColor="#FFF"
+        />
+
 
 </menu>
